# texasholdem

./: .gitignore  .pre-commit-config.yaml  LICENSE.  README.md  README.rst  deck.py  noxfile.py  player.py  poker_game.py  pyproject.toml  pytest.ini  rank.py  table.py
.github/workflows/: ci.yml  python-app.yml
.workflows/: ci.yml
docs/source/: conf.py  index.rst  usage.rst
src/: deck.py  npc.py  player.py  poker_game.py  printing.py  rank.py  run_game.py  texasholdem.py  texasholdem_demo.py
src/util/: cowboy.txt  title.txt
src/util/ascii/: cowboy.txt
tests/: test_deck.py  test_game.py  test_player.py  test_poker_game.py  test_rank.py
